<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <EditText
                    android:id="@+id/et_input"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:singleLine="true"
                    android:text="@string/edittext_hint"/>

                <EditText
                    android:id="@+id/et_semantic_request_extra_codes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/et_hint_semantic_request_extra_codes" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/custom_explanation"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/et_semantic_robot_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/et_hint_semantic_robot_id" />

                <EditText
                    android:id="@+id/et_semantic_robot_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/et_hint_semantic_robot_data" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_start"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:text="@string/nlp_start"
                android:textColor="@android:color/white"
                android:layout_marginTop="20dp"
                android:background="@drawable/selector_send_bg"/>

            <Button
                android:id="@+id/btn_request_first"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:text="@string/nlp_semantic_greet"
                android:textColor="@android:color/white"
                android:layout_marginTop="20dp"
                android:background="@drawable/selector_send_bg"/>

            <Button
                android:id="@+id/btn_request_auto"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:text="@string/nlp_semantic_active"
                android:textColor="@android:color/white"
                android:layout_marginTop="20dp"
                android:background="@drawable/selector_send_bg"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/results"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/tv_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>