<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="16dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="120dp">
        <EditText
            android:id="@+id/et_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edittext_hint"/>

    </ScrollView>

    <Button
        android:id="@+id/btn_start_nlp"
        android:layout_width="match_parent"
        android:text="@string/nlp_start"
        android:textColor="@android:color/white"
        android:layout_marginTop="20dp"
        style="@style/Button"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_start_play"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/start_play"
            android:layout_marginRight="5dp"
            style="@style/Button"/>
        <Button
            android:id="@+id/btn_stop"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/stop"
            android:layout_marginLeft="5dp"
            style="@style/Button"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/results"
        android:layout_marginTop="20dp"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp">
        <TextView
            android:id="@+id/tv_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"/>
    </ScrollView>
</LinearLayout>